增加了一些简单的示例

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "stopOnEntry": true,
-            "pythonPath": "${config:python.pythonPath}",
+            "pythonPath": "C:\\Users\\ms\\AppData\\Local\\Programs\\Python\\Python36\\python.exe",
             "program": "${file}",
             "cwd": "${workspaceRoot}",
             "env": {},
