增加了一个简单的画图程序

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\MOOM\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
+    "python.pythonPath": "C:\\Users\\ms\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
 }
