--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\ms\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
+    "python.pythonPath": "D:\\ProgramData\\Anaconda3\\python.exe"
 }
